# AoC-2022-Solutions

./: .gitignore  LICENSE  README.md
AmadorAndres/: .classpath  .project  README.txt  pom.xml
AmadorAndres/src/main/java/: day_01.java  day_02.java
AuquiDavid/: day1.py  day10.py  day2.py  day3.py  day4.py  day5.py  day6.py  day8.py
CarpioAlina/: .gitignore  package-lock.json  package.json
CarpioAlina/src/: common.ts  input.ts  main.ts
CarpioAlina/src/Day01/: PartOne.ts  PartTwo.ts  common.ts  index.ts
CarpioAlina/src/Day02/: PartOne.test.ts  PartOne.ts  PartTwo.test.ts  PartTwo.ts  common.ts  index.ts
CarvajalGiancarlo/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py
CañarteJohn/: day3.py  day4.py  day5.py  day6.py
CañarteJohn/Day_1/: day1.py
CañarteJohn/day2/: day_2.py  day_2p2.py
CoteraWashington/: .gitignore  pom.xml
CoteraWashington/src/main/java/day_01/: Common.java  PartOne.java  PartTwo.java  common.java
CoteraWashington/src/main/java/day_02/: Common.java  PartOne.java  PartTwo.java
CoteraWashington/src/main/java/day_03/: Common.java  PartOne.java  PartTwo.java
CoteraWashington/src/main/java/day_04/: Common.java  PartOne.java  PartTwo.java
CoteraWashington/src/main/java/day_05/: Common.java  PartOne.java  PartTwo.java
CoteraWashington/src/main/java/day_06/: Common.java  PartOne.java  PartTwo.java
CoteraWashington/src/main/java/day_07/: Common.java  PartOne.java  PartTwo.java
CoteraWashington/src/main/java/io/github/wgcotera/aoc/: Aoc.java  Util.java
CoteraWashington/src/main/java/io/github/wgcotera/aoc/day_01/: Common.java  PartOne.java  PartTwo.java
CoteraWashington/src/main/java/io/github/wgcotera/aoc/day_02/: Common.java  PartOne.java  PartTwo.java
CoteraWashington/src/main/java/io/github/wgcotera/aoc/day_03/: Common.java  PartOne.java  PartTwo.java
CoteraWashington/src/main/resources/: inputOne.txt
DelatorreHenry/: create_file.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_05.txt  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
DelgadoAdrian/: .gitignore  Cargo.toml  README.md  day_00.example
DelgadoAdrian/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  flags.rs  main.rs
ElPitagoras14/: day_02.py  day_03.py
EspinozaAxcel/: day_01.ts
GarciaJonathan/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  structures.py
GoussasAlexander/: .gitignore  .rubocop.yml  Gemfile  LICENSE  README.md  aoc-solutions.cabal  day12.rb  day13.rb  day14.rb  parser.rb
GoussasAlexander/CppSolutions/: .clang-format  .gitignore
GoussasAlexander/CppSolutions/include/: Aoc.hpp  DayNine.hpp  Point.hpp
GoussasAlexander/CppSolutions/src/: Aoc.cpp  DayNine.cpp  DayNineTest.cpp  Point.cpp  main.cpp
GoussasAlexander/HaskellSolutions/: aoc-solutions.cabal
GoussasAlexander/HaskellSolutions/app/: Main.hs
GoussasAlexander/HaskellSolutions/lib/Aoc/Day/Five/: Common.hs  PartOne.hs  PartTwo.hs  Solution.hs
GoussasAlexander/HaskellSolutions/lib/Aoc/Day/Four/: PartTwo.hs  Solution.hs
GoussasAlexander/HaskellSolutions/lib/Aoc/Day/One/: Common.hs  PartOne.hs  Solution.hs
GoussasAlexander/HaskellSolutions/lib/Aoc/Day/Six/: Common.hs  PartOne.hs  PartTwo.hs  Solution.hs
GoussasAlexander/HaskellSolutions/lib/Aoc/Day/Three/: Common.hs  PartOne.hs  PartTwo.hs  Solution.hs
GoussasAlexander/HaskellSolutions/lib/Aoc/Day/Two/: PartTwo.hs  Solution.hs
GoussasAlexander/HaskellSolutions/test/: DayFiveSpec.hs  DaySixSpec.hs  DayThreeSpec.hs  DayTwoSpec.hs
GoussasAlexander/HaskellSolutions/tool/aoc/: Main.hs
GoussasAlexander/HaskellSolutions/tool/aoc/Aoc/Tool/: Gen.hs  Input.hs  Print.hs
GoussasAlexander/JavaSolutions/: .clang-format  settings.gradle
GoussasAlexander/JavaSolutions/app/: build.gradle
GoussasAlexander/JavaSolutions/app/src/main/java/io/github/aloussase/aoc/: Aoc.java  App.java  DayFive.java
GoussasAlexander/JavaSolutions/app/src/main/resources/: day5.txt
GoussasAlexander/JavaSolutions/app/src/test/java/io/github/aloussase/aoc/: AppTest.java
GoussasAlexander/ZigSolutions/: build.zig
GoussasAlexander/ZigSolutions/src/: day01.zig  day07.zig  day08.zig  grid.zig  main.zig
GoussasAlexander/app/: Input.hs  Main.hs
GoussasAlexander/lib/Aoc/: Class.hs  Input.hs  Types.hs  Util.hs
GoussasAlexander/lib/Aoc/Day/Four/: Common.hs  PartOne.hs
GoussasAlexander/lib/Aoc/Day/One/: Common.hs  PartTwo.hs
GoussasAlexander/lib/Aoc/Day/Three/: Common.hs  PartOne.hs
GoussasAlexander/lib/Aoc/Day/Two/: Common.hs  PartOne.hs
GoussasAlexander/test/: DayFourSpec.hs  DayOneSpec.hs
GoussasAlexander/tool/aoc/Aoc/Tool/: Options.hs
LiceaMiguel/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
MoranDaniel/AdventOfCode/: Day4P1.py  Day4P2.py  day4input.txt
SalazarEduardo/: package.json
SalazarEduardo/day-1/: index.js  inputData.js
SalazarEduardo/day-2/: index.js
SalazarEduardo/day-3/: index.js
SalazarEduardo/day-4/: index.js  inputData.js
SalazarEduardo/day-5/: index.js  inputData.js
TutivenAndy/: dia_01.py  dia_02.py  dia_03.py  dia_04.py  dia_05.py
VeraRonald/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py
VillaCristopher/: .gitignore  pom.xml
VillaCristopher/src/main/java/Day_01/: Parte1.java  Parte2.java
(+24 files in other folders)
