[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Delgado <aoc2022@adrianjdelgado.com>"]


[dependencies]
bstr = "1.0.1"
clap = { version = "4.0.29", features = ["derive"] }
color-eyre = "0.6.2"
dotenvy = "0.15.6"
itertools = "0.10.5"
md-5 = "0.10.5"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
nom = "7.1.1"
petgraph = "0.6.2"
serde_json = "1.0.89"
time = { version = "0.3.17", features = ["macros"] }
ureq = { version = "2.5.0", features = ["cookies"] }
